...
                app:itemPaddingTop="14dp"
                app:itemPaddingBottom="10dp" />
        </FrameLayout>

        <!-- FAB Camera Hijau -->
        <FrameLayout
            android:id="@+id/fab_scan"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="18dp"
            android:background="@drawable/bg_fab_camera_emboss"
            android:elevation="6dp"
...
